# google-mcp

./: .gitignore
.github/workflows/: analytics.yaml  calendar.yaml  dependabot-reviewers.yaml  drive.yaml  gmail.yaml  group.yaml  search-console.yaml  sheet.yaml
analytics/: docker-compose.yml  pyproject.toml
analytics/app/: server.py
analytics/app/tools/: admin.py  metadata.py  realtime.py  reporting.py
calendar/: pyproject.toml
docs/: pyproject.toml
docs/app/: server.py
docs/app/apis/: documents.py
docs/tests/: test_server.py
drive/: pyproject.toml
gmail/: pyproject.toml
gmail/obot_gmail_mcp/: server.py
gmail/tests/: test_server.py
group/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
group/app/: __init__.py  server.py
group/app/apis/: __init__.py  domains.py  groups.py  helper.py  members.py
search-console/: docker-compose.yml  pyproject.toml
search-console/app/: auth.py  server.py
search-console/app/tools/: analytics.py  inspection.py  properties.py  sitemaps.py
sheets/: pyproject.toml
